[package]
name = "kvmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand = {workspace = true}


[build-dependencies]
tonic-build = { workspace = true }

