[package]
name = "kvstore"
version = "0.3.0"
edition = "2021"

[dependencies]
raft = { path = "../raft" }
tokio = { workspace = true }
#rocksdb = "0.21"
async-trait = "0.1" 
thiserror = "2.0.12"
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.11"
crc32fast = "1.4.2"
log = { workspace = true }

[build-dependencies]
tonic-build = {workspace = true}