[package]
name = "raft"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand = {workspace = true}
dashmap = "6.1.0"
bincode = "1.3"
crc32fast = "1.4.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.40"

[build-dependencies]
tonic-build = {workspace = true}
